# exhale-companion

./: .gitignore  CMakeLists.txt  README.md  README.rst
docs/: Doxyfile  Makefile  about.rst  compilation.rst  conf.py  exhale.py  how_created.rst  index.rst  library_api.rst  quick_start.rst  requirements.txt  using_intersphinx.rst
docs/_static/: theme_overrides.css
docs/_templates/: layout.html
docs/exhale/: exhale.py
include/: OuterFile.h
include/arbitrary/: BaseClass.h  DerivedClass.h  common.h
src/: main.cpp
